# allen-thesis-summer23

./: Alert3_Oct_7th_2022.html  IRM_cookie_Oct_7th_2022.html  LICENSE  README.md  Research_Paper_Draft_1.docx  experimented models.docx  for citation purpose.docx  package-lock.json  package.json  research paper writeup_1.docx
Professor/: Dataset.csv
Professor/extension/: background.js  inject.js  manifest_v3_errors.json
test/: IRM.html  IRM_JSON.html  IRM_include_url.html  package-lock.json  package.json  readdir.js  test_functions.js  vendors.2fe612ed88994725966f.js
test/Javascript_Automation/: SVM_code.py  background.js  index.js  index2.js  index_domain.js  index_domain_mal.js  index_done.js  index_final.js  index_n.js  inject_1.js  mal_6.csv  (+9 more)
test/mal4web-main/: README.md  pyproject.toml
test/mal4web-main/datasets/: README.MD
test/mal4web-main/experiments/: obfuscations
test/mal4web-main/feature_extraction/: README.MD  apis.csv
test/mal4web-main/feature_extraction/dynamic_analysis/: README.md  dynamic_analysis_extension.crx  hello_world.html  url_analyzer.py  urls_list.txt
test/mal4web-main/feature_extraction/dynamic_analysis/examples/: alert.js
test/mal4web-main/feature_extraction/dynamic_analysis/tests/: navigator_platform.html  navigator_userAgent.html  test.html  test_browsing.py  test_url_analyzer.py  window_setInterval.html
test/mal4web-main/feature_extraction/dynamic_analysis_extension/: DynamicFeatureExctractor.js  FeatureExtractor.js  background.js  content.js  manifest.json  pop.html
test/mal4web-main/references/: README.MD
(+16 files in other folders)
